syntax = "proto3";

package buildserver;

import "github.com/brotherlogic/gobuildslave/proto/slave.proto";

message Crash {
  string error_message = 1;
}

message Version {
  gobuildslave.Job job = 1;
  string version = 2;
  string path = 3;
  string server = 4;
  int64 version_date = 5;
  repeated Crash crashes = 6;
}

message VersionRequest {
  bool just_latest = 1;
  gobuildslave.Job job = 2;
}

message VersionResponse {
  repeated Version versions = 1;
}

service BuildService {
  rpc GetVersions(VersionRequest) returns (VersionResponse) {};
}
